Code changes related to menu and order management - catering

--- a/catering-hub/src/main/resources/application.properties
+++ b/catering-hub/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=catering-hub
+server.port = 8082
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/cateringDB
+spring.datasource.username = postgres
+spring.datasource.password = 1996sS*2025
+
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = update
