--- a/catering-hub/Dockerfile
+++ b/catering-hub/Dockerfile
@@ -1,7 +1,7 @@
 #
 # Build Stage
 #
-FROM maven:3.8.3-openjdk-21 AS build
+FROM maven:3.9.9-eclipse-temurin-21 AS build
 WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
